# ArxivAbstractsRAG-LLM

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db_init.py  docker-compose.yaml  download_abstracts.py  main.py  pyproject.toml
src/: db_init.py  dependencies.py  main.py
src/rag_service/: rag_service.py  utils.py
src/routers/: ask.py
src/schemas/: schemas.py
src/settings/: settings.py
