[project]
name = "findresearchpapers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "langchain-postgres>=0.0.15",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "ruff>=0.13.1",
]
script = [
    "datasets>=4.1.1",
    "python-dotenv>=1.1.1",
]
